--- a/app/components/Shipments/finished/finishedShipmentsView.html
+++ b/app/components/Shipments/finished/finishedShipmentsView.html
@@ -2,15 +2,15 @@
     <div class="auction-list-page">
         <div class="auction-list col-xs-12 col-sm-12 col-md-12 col-lg-12 ">
             <h2>{{'texts.shipment.finished' | i18next}}</h2>
-            <div ng-if="finishedShipments.length" class="auction-header-line col-sm-12 col-md-12 col-lg-12">
-                <div class="auction-header col-sm-9 col-md-9 col-lg-10">
-                    <div class="auction-cell col-sm-2 col-md-2 col-lg-2">{{'texts.auction.from' | i18next}}</div>
-                    <div class="auction-cell col-sm-2 col-md-2 col-lg-2">{{'texts.auction.to' | i18next}}</div>
+            <div ng-if="finishedShipments.length" class="auction-header-line">
+                <div class="auction-header">
+                    <div class="auction-cell col-sm-3">{{'texts.auction.from' | i18next}}</div>
+                    <div class="auction-cell col-sm-3">{{'texts.auction.to' | i18next}}</div>
                     <div class="auction-cell col-sm-4 col-md-4 col-lg-4">{{'texts.auction.freight_type.label' | i18next}}</div>
-                    <div class="auction-cell col-sm-4 col-md-4 col-lg-4">{{'texts.auction.price' | i18next}}</div>
+                    <div class="auction-cell col-sm-2">{{'texts.auction.price' | i18next}}</div>
                 </div>
             </div>
-            <div class="auction-body col-xs-12 col-sm-12 col-md-12 col-lg-12">
+            <div class="auction-body">
                 <div ng-if="!finishedShipments.length" class="no-auction">{{'texts.shipment.no_shipments' | i18next}}</div>
                 <div class="auction-item" ng-repeat="item in finishedShipments">
                     <detail-shipment shipment-item="{item}" finished-shipment="true"></detail-shipment>
