--- a/app/components/Shipments/new/newShipmentsView.html
+++ b/app/components/Shipments/new/newShipmentsView.html
@@ -4,10 +4,10 @@
             <h2>{{'texts.shipment.new' | i18next}}</h2>
             <div ng-if="newShipments.length" class="auction-header-line col-sm-12 col-md-12 col-lg-12">
                 <div class="auction-header col-sm-9 col-md-9 col-lg-10">
-                    <div class="auction-cell col-sm-2 col-md-2 col-lg-2">{{'texts.auction.from' | i18next}}</div>
-                    <div class="auction-cell col-sm-2 col-md-2 col-lg-2">{{'texts.auction.to' | i18next}}</div>
+                    <div class="auction-cell col-sm-3">{{'texts.auction.from' | i18next}}</div>
+                    <div class="auction-cell col-sm-3">{{'texts.auction.to' | i18next}}</div>
                     <div class="auction-cell col-sm-4 col-md-4 col-lg-4">{{'texts.auction.freight_type.label' | i18next}}</div>
-                    <div class="auction-cell col-sm-4 col-md-4 col-lg-4">{{'texts.auction.price' | i18next}}</div>
+                    <div class="auction-cell col-sm-2">{{'texts.auction.price' | i18next}}</div>
                 </div>
             </div>
             <div class="auction-body col-xs-12 col-sm-12 col-md-12 col-lg-12">
