--- a/app/components/Admin/Users/usersView.html
+++ b/app/components/Admin/Users/usersView.html
@@ -2,6 +2,8 @@
     <h1>{{'texts.admin' | i18next}}</h1>
     <div class="col-md-12">
         <h2>{{'texts.users' | i18next}}</h2>
+        <input type="text" ng-model="id_transporter"/>
+        <button ng-click="AddShipment(id_transporter)">Add Shipment</button>
         <table ng-if="users.length" class="table table-striped table-responsive user-list">
             <tr>
                 <th>Username</th>
