--- a/app/components/Company/companyView.html
+++ b/app/components/Company/companyView.html
@@ -1,52 +1,45 @@
 <m param="{route}">
     <h1>{{'texts.company' | i18next}}</h1>
-    <div class="col-md-12">
+    <div class="col-md-12 auction-list-page">
         <h2>{{'texts.drivers' | i18next}}</h2>
-        <table ng-if="drivers.length" class="table table-striped table-responsive company-list">
-            <tr>
-                <th>{{'texts.username' | i18next}}</th>
-                <th>{{'texts.name' | i18next}}</th>
-                <th>{{'texts.surname' | i18next}}</th>
-                <th>{{'texts.show_current_position' | i18next}}</th>
-                <th>{{'texts.actions' | i18next}}</th>
-                <th></th>
-            </tr>
-            <tr class="item" ng-repeat="driver in drivers">
-                <td>{{driver.username}}</td>
-                <td>{{driver.name}}</td>
-                <td>{{driver.surname}}</td>
-                <td><span class="glyphicon glyphicon-map-marker" ng-click="getDriverPosition(driver.ID)"></span></td>
-                <td>
-                    <div class='input-group datePickerVacation'>
-                        <input type='text' name="vacation" onkeydown="return false" class="form-control my-input inputDatePicker-{{driver.ID}}" id="vacation" placeholder="{{'texts.vacation' | i18next}}"/>
-                        <span class="input-group-addon" ng-click="clickDatePicker(driver.ID)">
-                            <span class="glyphicon glyphicon-calendar"></span>
-                        </span>
-                    </div>
-                    <div class="vacation-actions">
-                        <span class="glyphicon glyphicon-plus" title="{{'texts.add_vacation' | i18next}}" ng-click="addVacation(driver.ID)"></span>
-                        <span class="glyphicon glyphicon-minus" title="{{'texts.delete_vacation' | i18next}}" ng-click="removeVacation(driver.ID)"></span>
-                    </div>
-                </td>
-                <td>
-                    <span class="glyphicon glyphicon-remove delete" title="{{'texts.delete_driver' | i18next}}" ng-click="deleteUser(driver.ID)"></span>
-                </td>
-            </tr>
-        </table>
+        <div class="auction-list col-xs-12 col-sm-12 col-md-12 col-lg-12 ">
+            <div ng-if="drivers.length" class="auction-header-line col-sm-12 col-md-12 col-lg-12">
+                <div class="auction-header">
+                    <div class="auction-cell col-sm-3 col-md-3 col-lg-3"><span>{{'texts.username' | i18next}}</span></div>
+                    <div class="auction-cell col-sm-3 col-md-3 col-lg-3"><span>{{'texts.name' | i18next}}</span></div>
+                    <div class="auction-cell col-sm-4 col-md-4 col-lg-4"><span>{{'texts.user.my_shipments' | i18next}}</span></div>
+                    <div class="auction-cell col-sm-2 col-md-2 col-lg-2"></div>{{'texts.user.is_on_vac' | i18next}}
+                </div>
+            </div>
+            <div class="auction-body col-xs-12 col-sm-12 col-md-12 col-lg-12">
+                <div ng-if="!drivers.length" class="no-auction">{{'texts.auction.no_auction' | i18next}}</div>
+                <div class="auction-item" ng-repeat="driver in drivers">
+                    <detail-user driver="{driver}"></detail-user>
+                </div>
+            </div>
+        </div>
         <div ng-if="!drivers.length" class="text-center text-info">
             {{'texts.no_drivers' | i18next}}
         </div>
     </div>
 </m>
 
-<style type="text/css">
-    #currentlyPositionMap {
-        height: 450px;
-        width: 100%;
-        border: 1px solid #e6e6f1;
-    }
-</style>
-<script type="text/ng-template" id="modal_map">
-    <div id="currentlyPositionMap" class="map"></div>
-    <div> {{'texts.last_gps_update' | i18next}} - {{lastGpsUpdate}}</div>
+<script type="text/ng-template" id="modal_assign">
+    <h2>{{'texts.assignment_modal_title' | i18next}}</h2>
+    <table class="table table-striped table-responsive company-list">
+        <tr>
+            <th>{{'texts.auction.from' | i18next}}</th>
+            <th>{{'texts.auction.to' | i18next}}</th>
+            <th>{{'texts.auction.price' | i18next}}</th>
+            <th></th>
+        </tr>
+        <tr ng-repeat="shipment in shipmentsForDriver">
+            <td>{{shipment.address_from}}</td>
+            <td>{{shipment.address_to}}</td>
+            <td>{{shipment.price}}</td>
+            <td><input type="checkbox"  ng-click="setAssignment(shipment.ID, $event)" ng-checked="shipment.driver !== 0"/></td>
+        </tr>
+    </table>
+    <button ng-click="ok()">OK</button>
+    <button ng-click="cancel()">Cancel</button>
 </script>
