- trošku předělanej detail aukce - doplněný nějaky texty a drobnosti - kalendář v detailu řidiče

--- a/app/components/Shipments/new/newShipmentsView.html
+++ b/app/components/Shipments/new/newShipmentsView.html
@@ -2,8 +2,8 @@
     <div class="auction-list-page">
         <div class="auction-list col-xs-12 col-sm-12 col-md-12 col-lg-12 ">
             <h2>{{'texts.shipment.new' | i18next}}</h2>
-            <div ng-if="newShipments.length" class="auction-header-line col-sm-12 col-md-12 col-lg-12">
-                <div class="auction-header col-sm-9 col-md-9 col-lg-10">
+            <div ng-if="newShipments.length" class="auction-header-line">
+                <div class="auction-header">
                     <div class="auction-cell col-sm-3">{{'texts.auction.from' | i18next}}</div>
                     <div class="auction-cell col-sm-3">{{'texts.auction.to' | i18next}}</div>
                     <div class="auction-cell col-sm-4 col-md-4 col-lg-4">{{'texts.auction.freight_type.label' | i18next}}</div>
