--- a/css/content.css
+++ b/css/content.css
@@ -192,15 +192,16 @@
     height: 12px;
 }
 .auction-detail .auction-detail-item .auction-result {
-    text-align: left;
+    text-align: center;
+    margin-bottom: 12px;
 }
 .auction-detail .auction-detail-item .auction-result .win {
-    font-size: 25px;
+    font-size: 16px;
     font-weight: bold;
     color: green;
 }
 .auction-detail .auction-detail-item .auction-result .lose {
-    font-size: 25px;
+    font-size: 16px;
     font-weight: bold;
     color: red;
 }
@@ -236,7 +237,6 @@
 .auction-detail .history-header{
     font-weight: bold;
     background: #f8f8ff;
-    margin-right: 0;
 }
 .auction-detail .history-header div{
     padding: 5px;
@@ -244,7 +244,11 @@
 .auction-detail .history-list{
     overflow-x: hidden;
     overflow-y: auto;
-    max-height: 200px;
+    max-height: 100px;
+}
+.auction-detail .my-button {
+    margin-right: 0;
+    margin-bottom: 0;
 }
 .auction-detail .history-list-item{
     border-bottom: 1px solid #f8f8ff;
@@ -278,9 +282,13 @@
     padding: 0;
     text-align: right;
 }
-.auction-detail-item .detail-row .detail-label{
+.auction-detail-item .detail-label{
     font-weight: bold;
     padding: 0;
+}
+.auction-detail-item .detail-bid {
+    font-weight: bold;
+    padding: 10px 0;
 }
 .is-favourite{
     color: #12133d;
@@ -391,6 +399,11 @@
     border-bottom-color: #ffffff;
 }
 
+.photo-buttons .tab.active:last-child {
+    margin-right: 0;
+    border-right-color: #ffffff;
+}
+
 .photo-buttons .my-button{
     margin-bottom: 15px!important;
 }
@@ -408,7 +421,7 @@
     height: 110px;
     margin: 8px;
     background: #e6e6f1 no-repeat center;
-    background-size: contain;
+    background-size: cover;
 }
 
 .shipment-photos .photo:hover{
@@ -458,6 +471,10 @@
 /*auction ADD*/
 .auction-add-page{
 
+}
+
+hr.small {
+    margin: 10px 0;
 }
 
 @media (max-width: 991px) {
