--- a/app/components/Company/companyView.html
+++ b/app/components/Company/companyView.html
@@ -24,22 +24,31 @@
     </div>
 </m>
 
-<script type="text/ng-template" id="modal_assign">
-    <h2>{{'texts.assignment_modal_title' | i18next}}</h2>
-    <table class="table table-striped table-responsive company-list">
-        <tr>
-            <th>{{'texts.auction.from' | i18next}}</th>
-            <th>{{'texts.auction.to' | i18next}}</th>
-            <th>{{'texts.auction.price' | i18next}}</th>
-            <th></th>
-        </tr>
-        <tr ng-repeat="shipment in shipmentsForDriver">
-            <td>{{shipment.address_from}}</td>
-            <td>{{shipment.address_to}}</td>
-            <td>{{shipment.price}}</td>
-            <td><input type="checkbox"  ng-click="setAssignment(shipment.ID, $event)" ng-checked="shipment.driver !== 0"/></td>
-        </tr>
-    </table>
-    <button ng-click="ok()">OK</button>
-    <button ng-click="cancel()">Cancel</button>
+<script type="text/ng-template" id="modal_assign" class="modal-content">
+    <div class="modal-header">
+        <h2>{{'texts.assignment_modal_title' | i18next}}</h2>
+        <button ng-click="cancel()" type="button" class="close" data-dismiss="modal" aria-label="Close">
+            <span aria-hidden="true">&times;</span>
+        </button>
+    </div>
+    <div class="modal-body">
+        <table class="table table-striped table-responsive company-list">
+            <tr>
+                <th>{{'texts.auction.from' | i18next}}</th>
+                <th>{{'texts.auction.to' | i18next}}</th>
+                <th>{{'texts.auction.price' | i18next}}</th>
+                <th></th>
+            </tr>
+            <tr ng-repeat="shipment in shipmentsForDriver">
+                <td>{{shipment.address_from}}</td>
+                <td>{{shipment.address_to}}</td>
+                <td>{{shipment.price}}</td>
+                <td><input type="checkbox"  ng-click="setAssignment(shipment.ID, $event)" ng-checked="shipment.driver !== 0"/></td>
+            </tr>
+        </table>
+    </div>
+    <div class="modal-footer">
+        <div class="my-button normal-button" ng-click="ok()">Save changes</div>
+        <div class="my-button easy-button" ng-click="cancel()">Cancel</div>
+    </div>
 </script>
