--- a/css/form.css
+++ b/css/form.css
@@ -17,7 +17,7 @@
 }
 
 .datePickerVacation {
-    display: inline-block;
+    display: block;
     background: #ffffff;
     vertical-align: top;
     border-radius: 3px;
@@ -30,10 +30,7 @@
 }
 
 .vacation-actions {
-    display: inline-grid;
-    vertical-align: top;
     text-align: center;
-    padding-left: 14px;
 }
 .vacation-actions .my-button {
     margin: 10px 0;
@@ -41,6 +38,15 @@
 }
 .vacation-actions span{
     padding-right: 7px;
+}
+.datepicker-inline {
+    width: 100%;
+}
+.datepicker table {
+    width: 100%;
+}
+.table-condensed > tbody > tr > td {
+    padding: 3px auto;
 }
 
 .has-feedback-left .form-control-feedback {
