--- a/css/content.css
+++ b/css/content.css
@@ -7,7 +7,7 @@
 }
 
 .content{
-    max-width: 1140px;
+    max-width: 1280px;
     margin: 0 auto;
 }
 .no-overflow {
@@ -519,6 +519,7 @@
 .login-page{
     max-width: 558px;
     margin: 0 auto;
+    padding-top: 90px;
 }
 
 /*Registration page*/
