--- a/app/components/Company/companyView.html
+++ b/app/components/Company/companyView.html
@@ -58,3 +58,15 @@
         <div class="my-button easy-button" ng-click="cancel()">{{'texts.cancel' | i18next}}</div>
     </div>
 </script>
+<script type="text/ng-template" id="delete_user" class="modal-content">
+    <div class="modal-header">
+        <h2>{{'warnings.delete_driver' | i18next}}</h2>
+        <button ng-click="cancel()" type="button" class="close" data-dismiss="modal" aria-label="Close">
+            <span aria-hidden="true">&times;</span>
+        </button>
+    </div>
+    <div class="modal-footer">
+        <div class="my-button normal-button" ng-click="ok()">{{'texts.delete_driver' | i18next}}</div>
+        <div class="my-button easy-button" ng-click="cancel()">{{'texts.cancel' | i18next}}</div>
+    </div>
+</script>
