--- a/app/components/Shipments/new/newShipmentsView.html
+++ b/app/components/Shipments/new/newShipmentsView.html
@@ -20,3 +20,15 @@
         </div>
     </div>
 </m>
+<script type="text/ng-template" id="cancel_shipment" class="modal-content">
+    <div class="modal-header">
+        <h2>{{'warnings.stop_shipment' | i18next}}</h2>
+        <button ng-click="cancel()" type="button" class="close" data-dismiss="modal" aria-label="Close">
+            <span aria-hidden="true">&times;</span>
+        </button>
+    </div>
+    <div class="modal-footer">
+        <div class="my-button normal-button" ng-click="ok()">{{'texts.shipment.stopShipment' | i18next}}</div>
+        <div class="my-button easy-button" ng-click="cancel()">{{'texts.cancel' | i18next}}</div>
+    </div>
+</script>
