--- a/css/content.css
+++ b/css/content.css
@@ -221,7 +221,6 @@
 }
 .auction-detail .auction-detail-item .auction-result {
     text-align: center;
-    margin-bottom: 12px;
 }
 .auction-detail .auction-detail-item .auction-result .win {
     font-size: 16px;
@@ -323,6 +322,21 @@
 }
 .auction-detail .my-history{
     font-weight: bold;
+}
+.auction-detail .price-label{
+    font-size: 12px;
+    color: #aaaaaa;
+    margin-top: -5px;
+}
+.auction-detail .price{
+    font-size: 42px;
+    margin-top: -10px;
+}
+.auction-detail .info-block{
+    background: #ffffff;
+    padding: 15px 0;
+    border-radius: 3px;
+    margin-right: 15px;
 }
 .auction-detail .map {
     margin: 10px 0;
