--- a/css/content.css
+++ b/css/content.css
@@ -230,7 +230,7 @@
 .auction-detail .auction-detail-item .auction-result .lose {
     font-size: 16px;
     font-weight: bold;
-    color: red;
+    color: #dd0000;
 }
 .auction-detail .auction-detail-item .auction-result .no-bidder {
     font-size: 16px;
@@ -249,7 +249,7 @@
 }
 .auction-detail .delete-user .glyphicon{
     font-size: 12px;
-    color: red;
+    color: #dd0000;
 }
 .auction-detail .auction-detail-item .detail-row.cities{
     padding-bottom: 15px;
@@ -332,11 +332,15 @@
     font-size: 42px;
     margin-top: -10px;
 }
+.auction-detail .price.expired{
+    opacity: 0.5;
+}
 .auction-detail .info-block{
     background: #ffffff;
     padding: 15px 0;
     border-radius: 3px;
     margin-right: 15px;
+    font-weight: bold;
 }
 .auction-detail .map {
     margin: 10px 0;
@@ -344,6 +348,14 @@
     border: 1px solid #ffffff;
     background: #ffffff;
     border-radius: 3px;
+}
+.auction-detail .address {
+    margin: 4px 0;
+    font-size: 16px;
+}
+.auction-detail .address-arrow {
+    margin: -9px 0 -9px 2px;
+    font-size: 12px;
 }
 .auction-detail .map .icon{
     display: block;
@@ -366,8 +378,8 @@
     margin-right: 12px;
 }
 .auction-bid {
-    height: 50px;
-    margin-bottom: 12px;
+    height: 40px;
+    margin: 5px 0;
 }
 .auction-bid > div {
     padding: 0;
@@ -387,7 +399,7 @@
 .auction-detail-item div.detail-label{
     margin-bottom: 4px;
 }
-.auction-detail-item .detail-label .glyphicon, h3 .glyphicon{
+.auction-detail-item .glyphicon, h3 .glyphicon{
     padding-right: 8px;
     color: #aaaaaa;
     font-size: 1.2em;
@@ -437,7 +449,7 @@
     cursor: pointer;
 }
 .assignments table tr td .is-fixed {
-    color: red;
+    color: #dd0000;
     cursor: default;
 }
 
