--- a/app/components/Account/Profile/userProfileView.html
+++ b/app/components/Account/Profile/userProfileView.html
@@ -1,5 +1,5 @@
 <div class="user-page" ng-open="formLabels('changePasswordForm')">
-  <div class="col-md-6 col-xs-10 col-xs-offset-1 col-md-offset-0">
+  <div class="col-md-6 col-xs-12 col-md-offset-0 table-wrapper">
     <h1>{{'texts.your_acc' | i18next}}</h1>
     <table class="table table-striped table-responsive">
       <tr>
@@ -28,7 +28,7 @@
       </tr>
     </table>
   </div>
-  <div class="col-md-6 col-xs-10 col-xs-offset-1 col-md-offset-0">
+  <div class="col-md-6 col-xs-12 col-md-offset-0">
     <h1>{{'texts.change_password' | i18next}}</h1>
     <form name="changePasswordForm" novalidate>
       <div class="form-group has-feedback has-feedback-left">
