- responsivní menu - castecne responsivní tabulky a jejich hlavicky (auction/shipments/users)

--- a/app/components/Company/companyView.html
+++ b/app/components/Company/companyView.html
@@ -1,7 +1,6 @@
 <m param="{route}">
     <h1>{{'texts.company' | i18next}}</h1>
-    <div class="col-md-12 auction-list-page">
-        <h2>{{'texts.drivers' | i18next}}</h2>
+    <div class="auction-list-page">
         <div class="auction-list col-xs-12 col-sm-12 col-md-12 col-lg-12 ">
             <div ng-if="drivers.length" class="auction-header-line col-sm-12 col-md-12 col-lg-12">
                 <div class="auction-header">
