--- a/css/global.css
+++ b/css/global.css
@@ -92,26 +92,26 @@ p {
     border-bottom: 1px solid #e6e6f1;
     margin-bottom: 15px;
 }
-.tab{
+.tab {
     display: inline-block;
     vertical-align: bottom;
     min-width: 120px;
     max-width: 200px;
-    padding: 10px 15px;
+    padding: 10px 13px;
     margin: 0 7px;
     text-align: center;
     border: 1px solid #e6e6f1;
     background: #e6e6f1;
     border-radius: 5px 5px 0 0;
 }
-.tab:hover{
+.tab:hover {
     font-weight: bold;
     cursor: pointer;
 }
-.tab.active{
+.tab.active {
     background: #ffffff;
     border-bottom: 1px solid #ffffff;
-    padding: 12px 15px;
+    padding: 12px 13px;
     font-weight: bold;
     margin-bottom: -1px;
 }
@@ -121,7 +121,7 @@ p {
     padding-left: 0;
 }
 .menu-vertical .tab{
-    padding: 10px 15px;
+    padding: 10px 13px;
     margin: 10px 0;
     color: #2c2d51;
     background: #e6e6f1;
@@ -142,12 +142,23 @@ p {
     padding-left: 0;
 }
 
-@media (max-width: 900px) {
-    .menu-tabs{
-        padding-left: 20px;
+@media (max-width: 991px) {
+    /* MENU */
+    .menu-tabs {
+        padding-right: 0;
+        padding-left: 0;
+        text-align: center;
     }
-    .my-button{
+    .my-button {
         margin-right: 0;
+    }
+    .menu-vertical {
+        padding-right: 0;
+        text-align: center;
+    }
+    .menu-vertical .tab {
+        max-width: unset;
+        width: 24%;
     }
 }
 
@@ -160,10 +171,31 @@ p {
     }
 }
 
+@media (max-width: 600px) {
+    .menu-vertical .tab {
+        width: 48%;
+    }
+}
+
 @media (max-width: 500px) {
+    /* MENU */
+    .menu-tabs .tab {
+        min-width: unset;
+        width: 26%;
+    }
     /*DateTime Picker*/
     .bootstrap-datetimepicker-widget.dropdown-menu {
         width: 100%;
+    }
+}
+
+@media (max-width: 380px) {
+    /* MENU */
+    .menu-tabs .tab {
+        padding: 10px 0;
+    }
+    .menu-tabs .tab.active {
+        padding: 12px 0;
     }
 }
 
